# SpikeWizard

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  simple_example.ipynb
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  documentation.rst  index.rst  introduction.rst
src/: SpikeWizard.py
src/SpikeWizard.egg-info/: PKG-INFO  SOURCES.txt  solidity_cours.code-workspace
