[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-eggs"
version = "0"
requires-python = ">=3.8"
dependencies = ["	matplotlib==3.7.1", "numpy==1.26.4", "scipy==1.10.1"]
authors = [{ name = "Andrea Combette", email = "pradyun@example.com" }]
maintainers = [{ name = "Andrea Combette", email = "brett@example.com" }]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.rst"
license = { file = "LICENSE.txt" }
classifiers = ["Programming Language :: Python"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
